# ConsidComp

./: .gitignore  CMakeLists.txt  ConsidComp.cpp  README.md  main.cpp
